crates/ndc-postgres/tests/snapshots/query_tests__predicates__select_where_name_in.snap
---
source: crates/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": {
          "value": 346
        },
        "Title": {
          "value": "Mozart: Chamber Music"
        }
      }
    ]
  }
]
