crates/ndc-postgres/tests/snapshots/query_tests__predicates__select_where_name_iregex.snap
---
source: crates/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": {
          "value": 6
        },
        "Title": {
          "value": "Jagged Little Pill"
        }
      }
    ]
  }
]
